2008-01-07  Akim Demaille  <demaille@gostai.com>

	List.+=.
	* src/object/list-class.cc: Bind it to avoid warnings about non
	used functions.

2008-01-07  Akim Demaille  <demaille@gostai.com>

	reheader.
	* include/kernel/blockmemorymanager.hh,
	* include/kernel/fwd.hh,
	* include/kernel/memorymanager.hh,
	* include/kernel/ucomplaints.hh,
	* include/kernel/uconnection.hh,
	* include/kernel/userver.hh,
	* include/kernel/ustring.hh,
	* include/kernel/utypes.hh:
	Fix cpp guards.

2008-01-07  Samuel Tardieu  <tardieu@gostai.com>

	Use static where appropriate.
	* src/object/float-class.cc: Use static where appropriate.
	* src/object/object-class.cc: Ditto.
	* src/object/primitives.hh: Ditto.

2008-01-07  Samuel Tardieu  <tardieu@gostai.com>

	Fix GCC 4.3.0 warnings.
	* src/ucommandqueue.cc: Fix GCC 4.3.0 warnings.
	* src/userver.cc: Fix GCC 4.3.0 warnings.

2008-01-07  Samuel Tardieu  <tardieu@gostai.com>

	Fix incorrect function name in prototype.
	* include/kernel/userver.hh: Function was incorrectly prototyped
	as debug() instead of vdebug().

2008-01-07  Samuel Tardieu  <tardieu@gostai.com>

	Cleanup macro usage.
	* src/ast/flavor.cc (operator<<): Factor << operator into the
	macro.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	merge -r 2222:2227 https://svn.gostai.com/svn/kernel1/trunk
	2008-01-03  Akim Demaille  <demaille@gostai.com>
	A single config.h.
	The kernel used to create src/config.h, and sdk creates sdk/config.h.
	But Autoconf does not support multiple AC_CONFIG_HEADERS, so we keep
	only sdk's one.
	* configure.ac: No longer (pretend to) create src/config.h.
	* src/console-server.cc: Don't include unistd.h but libport's one.
	* src/parser/parser.mk, src/ubanner.cc: Find config.h in sdk.
	* src/ucommand.cc, src/userver.cc: Don't include config.h uselessly.

	2008-01-03  Akim Demaille  <demaille@gostai.com>
	Complete externals.
	* Makefile.am (SVN_EXTERNALS): Complete.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	k2 is green.